@@ -8,6 +8,7 @@
 - Added Fortran support.
 - Changed MSVC++ 2005 project to link with static MSVCRT library.
 - Added patch by SF user robin_charlton for Windows BMP support in ILUT.
+- Added preliminary Microsoft HD Photo support.
 
 1.7.2
 ---
